--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:8.2-fpm
 
+COPY ./php.ini /usr/local/etc/php/conf.d/custom.ini
+
 RUN apt-get update && apt-get install -y \
     zip \
     unzip \
